[gd_scene load_steps=2 format=3 uid="uid://1gtcrev6yrg4"]

[ext_resource type="Script" path="res://scripts/menus/customization_section.gd" id="1_sw0ox"]

[node name="CustomizationSection" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("1_sw0ox")
max_points = 4

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2

[node name="PointsLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "4/4 Points Spent"
horizontal_alignment = 2

[node name="HBoxContainer" type="GridContainer" parent="."]
layout_mode = 2
theme_override_constants/h_separation = 16
theme_override_constants/v_separation = 8
columns = 2

[node name="HullLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Hull"

[node name="HullSlider" type="HSlider" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 3.0

[node name="SailsLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Sails"

[node name="SailsSlider" type="HSlider" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 3.0

[node name="CannonsLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Cannons"

[node name="CannonsSlider" type="HSlider" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
max_value = 3.0

[node name="ReadyButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "READY"

[connection signal="value_changed" from="HBoxContainer/HullSlider" to="." method="_on_slider_value_changed"]
[connection signal="value_changed" from="HBoxContainer/SailsSlider" to="." method="_on_slider_value_changed"]
[connection signal="value_changed" from="HBoxContainer/CannonsSlider" to="." method="_on_slider_value_changed"]
[connection signal="pressed" from="ReadyButton" to="." method="_on_ready_button_pressed"]
